Fixed styling on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,13 @@
  */
 
 body {
-    padding: 70px 0;
+    padding: 70px 0 0;
+}
+
+@media (min-width: 992px) {
+    body {
+        padding-bottom: 70px;
+    }
 }
 
 /**
@@ -24,73 +30,89 @@ body {
 
 .banner {
     position: relative;
-    width: 100%;
-    height: 380px;
-    margin: -20px 0 20px;
-    background-color: #000;
-    background-image: linear-gradient(#000, #323232);
-    background-position: top center;
-    background-repeat: no-repeat;
-}
-.banner:before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    background-color: transparent;
-    background-image: linear-gradient(to right bottom, transparent 49%, #333 50%, transparent 51%);
-    background-size: 8px 8px;
-    top: 0;
-    bottom: 0;
-    left: 0;
-}
-.banner:after {
-    content: '';
-    overflow: visible;
-    position: absolute;
-    width: 60%;
-    background-color: white;
-    top: 0;
-    right: 0;
-    bottom: 0;
-}
-.banner .banner-divider {
-    display: block;
-    position: absolute;
-    width: 150px;
-    height: 380px;
-    background-image: url(../images/banner/banner.png);
-    background-position: 0 0;
-    background-repeat: no-repeat;
-    top: 0;
-    right: 60%;
-    z-index: 2;
-}
-
-.banner .banner-logo {
-    display: block;
-    position: absolute;
-    width: 320px;
-    height: 240px;
-    background-image: url(../images/banner/logo.png);
-    background-position: 0 0;
-    background-repeat: no-repeat;
-    top: 50px;
-    right: 72%;
+    height: 92px;
+    margin: 0 10px;
 }
 
 .banner .banner-text {
     display: block;
-    position: absolute;
     text-align: center;
-    width: 600px;
-    height: 108px;
-    padding-top: 200px;
-    background-image: url(../images/logo-text--600x108.png);
+    max-width: 100%;
+    width: 400px;
+    height: 72px;
+    margin: 0 auto;
+    background-image: url(../images/logo-text--400x72.png);
+    background-size: 100%;
     background-position: 0 0;
     background-repeat: no-repeat;
-    top: 150px;
-    left: 42%;
-    z-index: 1;
+}
+
+@media (min-width: 992px) {
+    .banner {
+        width: 100%;
+        height: 380px;
+        margin: -20px 0 20px;
+        background-color: #000;
+        background-image: linear-gradient(#000, #323232);
+        background-position: top center;
+        background-repeat: no-repeat;
+    }
+    .banner:before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        background-color: transparent;
+        background-image: linear-gradient(to right bottom, transparent 49%, #333 50%, transparent 51%);
+        background-size: 8px 8px;
+        top: 0;
+        bottom: 0;
+        left: 0;
+    }
+    .banner:after {
+        content: '';
+        overflow: visible;
+        position: absolute;
+        width: 60%;
+        background-color: white;
+        top: 0;
+        right: 0;
+        bottom: 0;
+    }
+    .banner .banner-divider {
+        display: block;
+        position: absolute;
+        width: 150px;
+        height: 380px;
+        background-image: url(../images/banner/banner.png);
+        background-position: 0 0;
+        background-repeat: no-repeat;
+        top: 0;
+        right: 60%;
+        z-index: 2;
+    }
+
+    .banner .banner-logo {
+        display: block;
+        position: absolute;
+        width: 320px;
+        height: 240px;
+        background-image: url(../images/banner/logo.png);
+        background-position: 0 0;
+        background-repeat: no-repeat;
+        top: 50px;
+        right: 72%;
+    }
+
+    .banner .banner-text {
+        position: absolute;
+        width: 600px;
+        height: 108px;
+        padding-top: 200px;
+        background-image: url(../images/logo-text--600x108.png);
+        top: 150px;
+        left: 42%;
+        z-index: 1;
+    }
 }
 
 /**
